Remove unwanted mtls configs
